# bitformat

./: .gitignore  .gitmodules  .readthedocs.yaml  CONTRIBUTING.md  Cargo.toml  README.md  build.sh  dev-requirements.txt  lark.py  pyproject.toml  release_notes.md
.github/actions/setup/: action.yaml
.github/workflows/: CI_Rust.yml  build.yml  ci.yml  code-quality.yaml  new_Rust_CI.yml  publish.yml  release.yml  setup.yml  test.yml
bit_rust/: Cargo.toml  LICENSE  README.md  pyproject.toml
bit_rust/src/: bits.rs  lib.rs
bit_rust/src/bitrust/: bits.rs  bits_tests.rs  core.rs  helpers.rs  iterator.rs  mod.rs  mutable.rs  mutable_test.rs
bit_rust/tests/: test_python_interface.py
bitformat/: __init__.py  _array.py  _bitformat_options.py  _bits.py  _bitstore.py  _bitstore_helpers.py  _bitstore_pure.py  _bitstore_rust.py  _common.py  _dtype_definitions.py  _dtypes.py  _exceptions.py  _field.py  _fieldtype.py  _format.py  _if.py  _lark_parser.py  _let.py  _options.py  _pass.py  _reader.py  _repeat.py  _utils.py  _version.py  _while.py  array_.py  bit_rust.pyi  bitarray_.py  bitformat_grammar.lark  bitformat_options.py  bits.py  bitstore.py  bitstore_helpers.py  bitstream.py  bitstring_options.py  common.py  dtypes.py  exceptions.py  field.py  format.py  (+6 more)
bitrust/: Cargo.toml  pyproject.toml
bitrust/src/: lib.rs
doc/: api.rst  array.rst  bitformat_tour.ipynb  bits.rst  bitsproxy.rst  bitstring_comparison.rst  conf.py  dtype.rst  dtypelist.rst  dtypes.rst  dtypetuple.rst  expression.rst  field.rst  fields.rst  fieldtype.rst  fieldtypes.rst  format.rst  if.rst  index.rst  introduction.rst  manual.rst  misc.rst  mutable_bits.rst  options.rst  parser_ref.rst  pass.rst  quick_reference.rst  reader.rst  register.rst  repeat.rst  requirements.txt  tldr.rst  tour.ipynb  tour.rst  use_case_construction.rst  use_case_formats.rst  use_case_manipulation.rst  use_cases.rst
doc/_static/: custom.css
doc/clean/: .buildinfo  format.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/clean/.doctrees/: environment.pickle  format.doctree  index.doctree
doc/clean/_sources/: index.rst.txt
doc/clean/_static/: custom.css
rust/src/: bits.rs  bits_tests.rs  core.rs  helpers.rs  iterator.rs  lib.rs  mod.rs  mutable.rs  mutable_test.rs
rust/src/bitrust/: core.rs  helpers.rs  iterator.rs  mod.rs  mutable.rs  mutable_test.rs
rust/tests/: test_python_interface.py
tests/: construct_test1.py  performance_comparison.py  requirements.txt  test_array.py  test_benchmarks.py  test_bitarray.py  test_bits.py  test_bitstream.py  test_common.py  test_coverage.py  test_coverage_README.md  test_dtypes.py  test_field.py  test_format.py  test_fuzzing.py  test_general.py  test_if.py  test_mutable_bits.py  test_pass.py  test_reader.py  test_repeat.py
tests/performance/: blob
