[package]
name = "bitformat"
version = "0.1.0"  # This version is not updated. The user will see the Python version.
edition = "2021"

[lib]
name = "bit_rust"
crate-type = ["cdylib"]
path = "bit_rust/src/lib.rs"

[dependencies]
hex = "0.4.3"
pyo3 = "0.25.1"
bitvec = "1.0.1"
hamming = "0.1.3"
bytemuck = "1.23.0"
lru = "0.10.0"
once_cell = "1.18.0"