[project]
name = "bitformat"
version = "0.2.0-alpha.1"
description = "A library for creating and interpreting binary formats."
readme = "README.md"
authors = [
    { name = "Scott Griffiths", email = "dr.scottgriffiths@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: File Formats",
    "Typing :: Typed"
]
keywords = ["binary", "bitarray", "bitvector", "bitfield", "bitstring", "construct", "struct", "parser"]
dependencies = [
    "lark >= 1.2.2, < 1.3.0",
]

[project.urls]
homepage = "https://github.com/scott-griffiths/bitformat"
documentation = "https://bitformat.readthedocs.io/"

[build-system]
requires = ["hatchling", "maturin>=1.7,<2.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "bitformat/format_parser.lark"
]

[tool.uv.sources]
bit-rust = { path = "bit_rust" }
